base/otel-collector/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
        - name: otel-collector
          image: otel/opentelemetry-collector:latest
          command:
            - "/otelcol"
            - "--config=/etc/otel-collector-config.yaml"

          ports:
            - containerPort: 4317
            - containerPort: 4318

          volumeMounts:
            - name: config
              mountPath: /etc/otel-collector-config.yaml
              subPath: otel-collector-config.yaml

      volumes:
        - name: config
          configMap:
            name: otel-collector-config
