base/otel-collector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
spec:
  selector:
    app: otel-collector

  ports:
    - name: grpc
      port: 4317
      targetPort: 4317

    - name: http
      port: 4318
      targetPort: 4318
