base/otel-collector/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: otel-collector

spec:
  ingressClassName: nginx

  rules:
    - host: otel.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: otel-collector
                port:
                  number: 4318
